# ruzen

./: .gitignore  Cargo.toml  README.md
.github/workflows/: client.yml  rust.yml  server.yml
client/: Cargo.toml
client/src/: init.glu  interpreter.rs  main.rs  test.glu
server/: Cargo.toml
server/src/: clock.rs  instrument.rs  main.rs  osc_server.rs  out.rs  plot.rs
server/src/instrument/: mod.rs  parameters.rs
server/src/state/: mod.rs
server/src/state/ugen/: envelope.rs  mod.rs
server/src/state/ugen/generator/: mod.rs  pulse.rs  saw.rs  sine.rs  whitenoise.rs
server/src/state/ugen/params/: mod.rs
server/src/synth/: mod.rs  parameters.rs  state.rs
server/src/synth/ugen/: envelope.rs  generator.rs  mod.rs
server/src/synth/ugen/generator/: mod.rs  pulse.rs  saw.rs  sine.rs  whitenoise.rs
server/src/synth/ugen/generators/: mod.rs  pulse.rs  saw.rs
server/src/synth/ugen/params/: mod.rs
server/src/ugen/: envelope.rs  generator.rs  mod.rs
server/src/ui/: interpreter.rs  mod.rs  ui.lua
src/: clock.rs  command_factory.rs  envelope.rs  instrument.rs  main.rs  osc_server.rs  oscillator.rs  out.rs  plot.rs  signal.rs  sinewave.rs  synth.rs
src/synth/: mod.rs
src/ugen/: envelope.rs  generator.rs  mod.rs
src/ui/: mod.rs
vscode-ruzen/: CHANGELOG.md  README.md  example.dyo  example.lua  example.rhai  package-lock.json  package.json
vscode-ruzen/src/: editor.ts  extension.ts  ruzen.ts
vscode-ruzen/src/test/suite/: editor.test.ts
