[package]
name = "ruzen-client"
version = "0.1.0"
authors = ["Andrea Bertagnolli <andrea.bertagnolli@cherrychain.it>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rosc = "0.2.0"
rand = "0.7.1"
gluon = "0.13.1"
gluon_vm = "0.13.1"
crossbeam = "0.7.3"