[package]
name = "ruzen-server"
version = "0.1.0"
authors = ["Andrea Bertagnolli <andrea.bertagnolli@cherrychain.it>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cpal = "0.11.0"
failure = "0.1.5"
rand = "0.7.1"
gnuplot = "0.0.34"
rosc = "~0.3"
rlua = "0.17.0"
crossbeam-channel = "0.4.4"

[dev-dependencies]
assert_approx_eq = "1.1.0"
